# goodreads-user-scraper

./: .bumpversion.cfg  .bumpversion.toml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  LICENSE.md  README.md  conductor.json  get_book.py  get_user.py  makefile  pyproject.toml  requirements.txt  setup.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  integrate.yml  integration.yml  publish.yml
assets/: _demo-common.tape  demo-full.tape  demo-invalid-cookie.tape  demo-no-cookie.tape  demo-nothing-to-do.tape  demo.tape
docs/superpowers/plans/: 2026-05-27-shelf-cookie-auth.md
docs/superpowers/specs/: 2026-05-27-shelf-cookie-auth-design.md  2026-05-28-async-aiohttp-rewrite-design.md  2026-05-28-concurrent-shelves-design.md  2026-05-29-http-retry-backoff-design.md  2026-05-29-scraper-progress-indicators-design.md  2026-05-30-type-hints-mypy-design.md
scraper/: __main__.py  author.py  books.py  http.py  parse.py  scrape_book.py  shelf.py  shelves.py  user.py
scripts/: capture_fixtures.py  install.sh  publish.sh  render_demos.sh  test.sh
src/goodreads_scraper/: main.py
src/goodreads_scraper/scraper/: author.py  books.py  shelves.py  user.py
tests/: conftest.py  test_author.py  test_books.py  test_http.py  test_main.py  test_parse.py  test_shelves.py  test_user.py
tests/fixtures/: author.html  author_anon.html  author_no_image.html  book.html  book_anon.html  book_minimal.html  profile.html  profile_anon.html  shelf_empty.html  shelf_read.html  shelf_to_read.html
