[tool.poetry]
name = "goodreads-scraper"
version = "0.1.0"
description = ""
authors = ["karlwebstersponge <19327709+ktasper@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goodreads_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grs = "src.goodreads_scraper.main:cli"

[tool.black]
line-length = 88
target-version = ['py310']
include = "src"