[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "goodreads-user-scraper"
description = "Export Goodreads profile, shelves, books, and authors to JSON"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yash Totale", email = "totaleyash@gmail.com" }]
requires-python = ">=3.10"
keywords = ["Goodreads", "books", "reading", "web scraper", "CLI"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]
dependencies = ["beautifulsoup4", "aiohttp", "rich"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black==26.5.1", "bump-my-version", "mypy", "pre-commit", "pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/YashTotale/goodreads-user-scraper#readme"
"Source Code" = "https://github.com/YashTotale/goodreads-user-scraper"
"Bug Tracker" = "https://github.com/YashTotale/goodreads-user-scraper/issues"
"Release Notes" = "https://github.com/YashTotale/goodreads-user-scraper/releases"

[project.scripts]
goodreads-user-scraper = "scraper.__main__:main"

[tool.setuptools]
packages = ["scraper"]

[tool.setuptools.dynamic]
version = { attr = "scraper.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
files = ["scraper"]
disallow_untyped_defs = true

[tool.black]
target-version = ["py310"]

[tool.bumpversion]
current_version = "2.3.0"
commit = true
tag = true
message = "v{new_version}"

[[tool.bumpversion.files]]
filename = "scraper/__init__.py"
